--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 </head>
 <body>
     <div class="container-fluid ">
-        <div class="row title">
+        <header class="row">
             <div class="col-md-10 col-md-offset-1">
                 <h1>寻找英雄角色吗？</h1>
                 <p>在尝试各个英雄之前，先了解他们在团队中的角色。</p>
             </div>
-        </div>
+        </header>
         <!--list-->
-        <div class="row">
+        <nav class="row">
             <div class="col-md-10 col-md-offset-1">
                 <ul class="nav nav-pills nav-justified">
                     <li class="active"><a href="#">所有</a></li>
@@ -27,7 +27,7 @@
                     <li><a>支援<img src="svg/support.svg"/></a></li>
                 </ul>
             </div>
-        </div>
+        </nav>
         <!--hero-->
         <div class="row">
             <div class="col-md-10 col-md-offset-1">
@@ -64,7 +64,7 @@
             </div>
         </div>
         <!--bottom-->
-        <div class="row">
+        <footer class="row">
             <div class="col-md-12 text-center bottom">
                 <p>
                     积极健康的游戏心态是健康游戏的开端，本游戏故事情节设置紧凑，请您合理控制游戏时间，避免沉溺游戏影响生活，注意自我保护，防范网络陷阱。
@@ -73,7 +73,7 @@
                     健康游戏忠告：抵制不良游戏，拒绝盗版游戏。注意自我保护，谨防受骗上当。适度游戏益脑，沉迷游戏伤身。合理安排时间，享受健康生活。
                 </p>
             </div>
-        </div>
+        </footer>
     </div>
 
 <script src="js/jquery.min.js"></script>
