--- a/heros/bastion.html
+++ b/heros/bastion.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <div class="container-fluid">
-    <div class="row header">
+    <header class="row">
         <div class="bg">
             <video class="active">
                 <source type="video/webm" src="http://overwatch.nos.netease.com/1/assets/images/hero/bastion/intro-video.webm">
@@ -88,7 +88,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </header>
     <!--head-->
     <div class="row details">
         <div class="details-bg">
@@ -220,7 +220,7 @@
         </div>
     </div>
     <!-- body-->
-    <div class="row bottom">
+    <footer class="row">
         <div class="col-md-12 text-center">
             <h1>请选择一名英雄</h1>
         </div>
@@ -284,7 +284,7 @@
         </div>
 
 
-    </div>
+    </footer>
     <!--foot-->
 </div>
 
