--- a/heros/genji.html
+++ b/heros/genji.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="container-fluid">
-        <div class="row header">
+        <header class="row">
             <div class="bg">
                 <video class="active">
                     <source type="video/webm" src="http://overwatch.nos.netease.com/1/assets/images/hero/genji/intro-video.webm">
@@ -77,7 +77,7 @@
                 </div>
                 </div>
             </div>
-        </div>
+        </header>
         <!--head-->
         <div class="row details">
             <div class="details-bg">
@@ -198,7 +198,7 @@
             </div>
         </div>
         <!-- body-->
-        <div class="row bottom">
+        <footer class="row">
             <div class="col-md-12 text-center">
                 <h1>请选择一名英雄</h1>
             </div>
@@ -262,7 +262,7 @@
             </div>
 
 
-        </div>
+        </footer>
         <!--foot-->
     </div>
 
