--- a/heros/junkrat.html
+++ b/heros/junkrat.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="../css/heros.css" />
 </head>
 <body>
-<div class="container-fluid">
-    <div class="row header">
+<footer class="container-fluid">
+    <header class="row">
         <div class="bg">
             <video class="active">
                 <source type="video/webm" src="http://overwatch.nos.netease.com/1/assets/images/hero/junkrat/intro-video.webm">
@@ -88,7 +88,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </header>
     <!--head-->
     <div class="row details">
         <div class="details-bg">
@@ -222,7 +222,7 @@
         </div>
     </div>
     <!-- body-->
-    <div class="row bottom">
+    <footer class="row">
         <div class="col-md-12 text-center">
             <h1>请选择一名英雄</h1>
         </div>
@@ -286,7 +286,7 @@
         </div>
 
 
-    </div>
+    </footer>
     <!--foot-->
 </div>
 
