--- a/heros/mercy.html
+++ b/heros/mercy.html
@@ -205,7 +205,7 @@
                         <p><span class="glyphicon glyphicon-bookmark"></span><span>隶属：（前）守望先锋成员</span></p>
                     </div>
                     <div class="col-md-12 col-xs-12">
-                        <h3>“造得起，也砸得坏。”</h3>
+                        <h3>“英雄不朽。”</h3>
                     </div>
                 </div>
                 <div class="col-md-12 col-xs-12 story">
